--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "mapbox-gl": "^0.53.1",
     "primeicons": "^4.1.0",
     "primevue": "^2.3.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.2",
     "vue-chartjs": "^3.5.0",
+    "vue-mapbox": "^0.4.1",
     "vue-router": "^3.1.5",
     "vue-stepper": "^1.4.2",
     "vue-sweetalert2": "^4.1.1",
